--- a/.hound.yml
+++ b/.hound.yml
@@ -2,22 +2,22 @@ coffeescript:
   enabled: false
 eslint:
   enabled: true
-  config_file: style/javascript/.eslintrc.json
+  #  config_file: style/javascript/.eslintrc.json
   version: 6.3.0
 haml:
   enabled: true
-  config_file: style/haml/haml.yml
+  # config_file: style/haml/haml.yml
 javascript:
   enabled: false
 jscs:
   enabled: true
-  config_file: style/javascript/.jscsrc
+  # config_file: style/javascript/.jscsrc
 rubocop:
   enabled: true
-  config_file: style/ruby/.rubocop.yml
+  config_file: .rubocop.yml
   version: 0.72.0
 scss:
   enabled: false
 stylelint:
   enabled: true
-  config_file: style/sass/.stylelintrc.json
+  # config_file: style/sass/.stylelintrc.json
