--- a/.hound.yml
+++ b/.hound.yml
@@ -2,7 +2,7 @@ coffeescript:
   enabled: false
 eslint:
   enabled: true
-  #  config_file: style/javascript/.eslintrc.json
+  config_file: app/javascript/.eslintrc.yml
   version: 6.3.0
 haml:
   enabled: true
